--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -829,7 +829,7 @@
 <ol>
 <li>
 <p>PC280LG-301</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image1.png" data-desc-position="bottom"><img alt="" src="../image1.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MFG_PC280LG-301.jpg" data-desc-position="bottom"><img alt="" src="../MFG_PC280LG-301.jpg"></a></p>
 <ul>
 <li>$1/each</li>
 <li><a href="http://www.digikey.com/product-detail/en/ECS-40.3-S-5PX-TR/XC1259TR-ND/827366">link to product</a></li>
