deploy: 0dca6224e4209fa4621d11d23960c6d59ceca1e5

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -831,8 +831,8 @@
 <p>PC280LG-301</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MFG_PC280LG-301.jpg" data-desc-position="bottom"><img alt="" src="../MFG_PC280LG-301.jpg"></a></p>
 <ul>
-<li>$1/each</li>
-<li><a href="http://www.digikey.com/product-detail/en/ECS-40.3-S-5PX-TR/XC1259TR-ND/827366">link to product</a></li>
+<li>$7.27/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/johnson-motor/PC280LG-301/12719595?s=N4IgTCBcDaIAoGEwA4AMAZA4gWgMyoEYQBdAXyA">link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -859,10 +859,10 @@
 </li>
 <li>
 <p>CTX936TR-ND surface mount oscillator</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../image3.png" data-desc-position="bottom"><img alt="" src="../image3.png"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../D.jpg" data-desc-position="bottom"><img alt="" src="../D.jpg"></a></p>
 <ul>
-<li>$1/each</li>
-<li><a href="http://www.digikey.com/product-detail/en/636L3I001M84320/CTX936TR-ND/2292940">Link to product</a></li>
+<li>$29.92/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/nidec-components-corporation/HG37-120-AA-00/14553405?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mSe77BaK-WFdIAoTd1RI54J1lqSxFic8uShvaWAAsPBEAm5zt6otORoC6HsQAvD_BwE">Link to product</a></li>
 </ul>
 <table>
 <thead>
