--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -858,7 +858,7 @@
 </table>
 </li>
 <li>
-<p>CTX936TR-ND surface mount oscillator</p>
+<p>HG37-120-AA-00</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../D.jpg" data-desc-position="bottom"><img alt="" src="../D.jpg"></a></p>
 <ul>
 <li>$29.92/each</li>
@@ -888,8 +888,69 @@
 </table>
 </li>
 </ol>
-<p><strong>Choice:</strong> Option 2: CTX936TR-ND surface mount oscillator</p>
-<p><strong>Rationale:</strong> A clock oscillator is easier to work with because it requires no external circuitry in order to interface with the PSoC. This is particularly important because we are not sure of the electrical characteristics of the PCB, which could affect the oscillation of a crystal. While the shipping speed is slow, according to the website if we order this week it will arrive within 3 weeks.</p>
+<p><strong>Soil Moisture Sensor</strong></p>
+<ol>
+<li>
+<p>13637</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MFG_PC280LG-301.jpg" data-desc-position="bottom"><img alt="" src="../MFG_PC280LG-301.jpg"></a></p>
+<ul>
+<li>$7.95/each</li>
+<li><a href="[https://www.digikey.com/en/products/detail/johnson-motor/PC280LG-301/12719595?s=N4IgTCBcDaIAoGEwA4AMAZA4gWgMyoEYQBdAXyA](https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE)">link to product</a></li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Inexpensive</td>
+<td>Requires external components and support circuitry for interface</td>
+</tr>
+<tr>
+<td>Compatible with PSoC</td>
+<td>Needs special PCB layout.</td>
+</tr>
+<tr>
+<td>Meets surface mount constraint of project</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</li>
+<li>
+<p>SEN0114</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../D.jpg" data-desc-position="bottom"><img alt="" src="../D.jpg"></a></p>
+<ul>
+<li>$2.70/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/dfrobot/SEN0114/6588525?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mbQSvFXrFn6uSSuxGg_qehQQK9Uty_P8yXZ4lFzpzHMJX-7nO5745RoCtCwQAvD_BwE">Link to product</a></li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Outputs a square wave</td>
+<td>More expensive</td>
+</tr>
+<tr>
+<td>Stable over operating temperature</td>
+<td>Slow shipping speed</td>
+</tr>
+<tr>
+<td>Direct interface with PSoC (no external circuitry required) range</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</li>
+</ol>
 
 
 
