deploy: 6a46d89548c8699dbcda9695b7de29961d154cd9

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -892,7 +892,7 @@
 <ol>
 <li>
 <p>13637</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../MFG_PC280LG-301.jpg" data-desc-position="bottom"><img alt="" src="../MFG_PC280LG-301.jpg"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../13637.jpg" data-desc-position="bottom"><img alt="" src="../13637.jpg"></a></p>
 <ul>
 <li>$7.95/each</li>
 <li><a href="[https://www.digikey.com/en/products/detail/johnson-motor/PC280LG-301/12719595?s=N4IgTCBcDaIAoGEwA4AMAZA4gWgMyoEYQBdAXyA](https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE)">link to product</a></li>
@@ -922,10 +922,73 @@
 </li>
 <li>
 <p>SEN0114</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../D.jpg" data-desc-position="bottom"><img alt="" src="../D.jpg"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../SEN0114.jpg" data-desc-position="bottom"><img alt="" src="../SEN0114.jpg"></a></p>
 <ul>
 <li>$2.70/each</li>
 <li><a href="https://www.digikey.com/en/products/detail/dfrobot/SEN0114/6588525?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mbQSvFXrFn6uSSuxGg_qehQQK9Uty_P8yXZ4lFzpzHMJX-7nO5745RoCtCwQAvD_BwE">Link to product</a></li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Outputs a square wave</td>
+<td>More expensive</td>
+</tr>
+<tr>
+<td>Stable over operating temperature</td>
+<td>Slow shipping speed</td>
+</tr>
+<tr>
+<td>Direct interface with PSoC (no external circuitry required) range</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</li>
+</ol>
+<p><strong>H Bridge</strong></p>
+<ol>
+<li>
+<p>INA125P</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../13637.jpg" data-desc-position="bottom"><img alt="" src="../13637.jpg"></a></p>
+<ul>
+<li>$10.08/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/texas-instruments/INA125P/254670?gclsrc=aw.ds&amp;gad_source=4&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlhdskTRyyOweqI0wZs3p_N9a&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3maSekNz6cEfK83rlFOWYgj_-v-7Q3MSDubHQqxA6B9jR7x_icL5iBhoC0mcQAvD_BwE">link to product</a></li>
+</ul>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Inexpensive</td>
+<td>Requires external components and support circuitry for interface</td>
+</tr>
+<tr>
+<td>Compatible with PSoC</td>
+<td>Needs special PCB layout.</td>
+</tr>
+<tr>
+<td>Meets surface mount constraint of project</td>
+<td></td>
+</tr>
+</tbody>
+</table>
+</li>
+<li>
+<p>HIP4082IPZ</p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../SEN0114.jpg" data-desc-position="bottom"><img alt="" src="../SEN0114.jpg"></a></p>
+<ul>
+<li>$2.70/each</li>
+<li><a href="https://www.digikey.com/en/products/detail/renesas-electronics-corporation/HIP4082IPZ/821447">Link to product</a></li>
 </ul>
 <table>
 <thead>
