--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -895,7 +895,7 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../13637.jpg" data-desc-position="bottom"><img alt="" src="../13637.jpg"></a></p>
 <ul>
 <li>$7.95/each</li>
-<li><a href="[https://www.digikey.com/en/products/detail/johnson-motor/PC280LG-301/12719595?s=N4IgTCBcDaIAoGEwA4AMAZA4gWgMyoEYQBdAXyA](https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE)">link to product</a></li>
+<li>[link to product(https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE)</li>
 </ul>
 <table>
 <thead>
@@ -955,7 +955,7 @@
 <ol>
 <li>
 <p>INA125P</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../13637.jpg" data-desc-position="bottom"><img alt="" src="../13637.jpg"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../INA125P.png" data-desc-position="bottom"><img alt="" src="../INA125P.png"></a></p>
 <ul>
 <li>$10.08/each</li>
 <li><a href="https://www.digikey.com/en/products/detail/texas-instruments/INA125P/254670?gclsrc=aw.ds&amp;gad_source=4&amp;gad_campaignid=20228387720&amp;gbraid=0AAAAADrbLlhdskTRyyOweqI0wZs3p_N9a&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3maSekNz6cEfK83rlFOWYgj_-v-7Q3MSDubHQqxA6B9jR7x_icL5iBhoC0mcQAvD_BwE">link to product</a></li>
@@ -985,7 +985,7 @@
 </li>
 <li>
 <p>HIP4082IPZ</p>
-<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../SEN0114.jpg" data-desc-position="bottom"><img alt="" src="../SEN0114.jpg"></a></p>
+<p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../HIP4082IPZ.jpg" data-desc-position="bottom"><img alt="" src="../HIP4082IPZ.jpg"></a></p>
 <ul>
 <li>$2.70/each</li>
 <li><a href="https://www.digikey.com/en/products/detail/renesas-electronics-corporation/HIP4082IPZ/821447">Link to product</a></li>
