deploy: 51cd4d486387978c162f276c28c98351d30fb82a

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -887,6 +887,9 @@
 </tbody>
 </table>
 </li>
+<li>
+<p>Custom Electrical Option/Mechanical Option</p>
+</li>
 </ol>
 <p><strong>Soil Moisture Sensor</strong></p>
 <ol>
@@ -895,7 +898,7 @@
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../13637.jpg" data-desc-position="bottom"><img alt="" src="../13637.jpg"></a></p>
 <ul>
 <li>$7.95/each</li>
-<li>[link to product(https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE)</li>
+<li><a href="https://www.digikey.com/en/products/detail/sparkfun-electronics/13637/7400839?gclsrc=aw.ds&amp;gad_source=1&amp;gad_campaignid=20243136172&amp;gbraid=0AAAAADrbLljBQunprEOtznelsRLs-J4uH&amp;gclid=CjwKCAjwmNLHBhA4EiwA3ts3mayriRdZcvui0HTdYMicDMSrmrPi3kqTxbDrLqTR_hUmT-cr0AV9jhoCaVgQAvD_BwE">link to product</a></li>
 </ul>
 <table>
 <thead>
@@ -949,6 +952,9 @@
 </tr>
 </tbody>
 </table>
+</li>
+<li>
+<p>Custom Electrical Option/Mechanical Option</p>
 </li>
 </ol>
 <p><strong>H Bridge</strong></p>
@@ -1012,6 +1018,9 @@
 </tr>
 </tbody>
 </table>
+</li>
+<li>
+<p>Custom Electrical Option/Mechanical Option</p>
 </li>
 </ol>
 
