deploy: d3d00c429e9af5af03c947a12140d66d9be42721

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -885,16 +885,16 @@
 </thead>
 <tbody>
 <tr>
-<td>Outputs a square wave</td>
-<td>More expensive</td>
+<td>Integrated planetary gearbox (1:120) — delivers usable low speed and much higher output torque than raw motor. Good for compact, low-RPM actuators.</td>
+<td>Relatively high unit cost.</td>
 </tr>
 <tr>
-<td>Stable over operating temperature</td>
-<td>Slow shipping speed</td>
+<td>Moderate continuous torque (~392 mN·m) — suitable for small mechanical loads without extra gearbox.</td>
+<td>Brushed DC motor (likely) — brush wear and EMI; not as long-lived as brushless options for heavy continuous-duty applications.</td>
 </tr>
 <tr>
-<td>Direct interface with PSoC (no external circuitry required) range</td>
-<td></td>
+<td>Compact (Ø37 mm) — small footprint that fits into constrained mechanical designs.</td>
+<td>No integrated encoder/feedback — add external encoder or sensor for closed-loop position/speed control.</td>
 </tr>
 </tbody>
 </table>
