deploy: 7d7a29131312d18b3134ff43e6fbdd372398178c

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -900,9 +900,32 @@
 </table>
 </li>
 <li>
-<p>Custom Electrical Option/Mechanical Option</p>
+<p><strong>Custom Electrical Option/Mechanical Option</strong>
+       A compact planetary gearbox + output rotary encoder + driver + mounting built around a small DC can motor. This option is intended where off-the-shelf torque/speed/feedback packages are unavailable or you want tighter control over form-factor, gear ratio, and sensor placement.</p>
 </li>
 </ol>
+<table>
+<thead>
+<tr>
+<th>Pros</th>
+<th>Cons</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Custom ratio &amp; footprint — choose exact gear ratio, shaft length, and mounting pattern to fit your device.</td>
+<td>Higher design &amp; build complexity vs buying an off-the-shelf geared motor.</td>
+</tr>
+<tr>
+<td>Easier maintenance/repair — you can replace gears, bearings, encoder separately.</td>
+<td>Prototype accuracy depends on manufacturing quality (3D printed gears/print tolerances introduce backlash).</td>
+</tr>
+<tr>
+<td>Integrated high-resolution feedback — encoder on output gives direct, backlash-compensated position readings.</td>
+<td>Longer development time &amp; potential higher unit cost for single pieces.</td>
+</tr>
+</tbody>
+</table>
 <p><strong>Soil Moisture Sensor</strong></p>
 <ol>
 <li>
