deploy: 3691b92b018d209dcd74e78c2d803f43ff5bcca3

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -989,7 +989,15 @@
 </table>
 </li>
 <li>
-<p>Custom Electrical Option/Mechanical Option</p>
+<p><strong>Custom Electrical Option/Mechanical Option</strong>
+    Design a durable, low-power, accurate soil-moisture sensing module. Uses a capacitive sensing element, temperature compensation, waterproofing, and an optional digital output (I²C) for easy integration.
+   | Pros                                                                                   | Cons / Risks                                                                         |
+| -------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------ |
+| <strong>Low corrosion</strong> (capacitive) — longer lifetime than exposed resistive probes.        | <strong>Higher complexity &amp; cost</strong> than cheap resistive probe.                             |
+| <strong>Low power</strong> — can be battery operated for months/years.                              | <strong>Probe coating affects sensitivity</strong> — must choose coating carefully and calibrate. |
+| <strong>High accuracy &amp; repeatability</strong> with cap-to-digital IC and temperature compensation. | <strong>Environmental factors (salinity, soil composition)</strong> still require calibration.    |
+| <strong>Digital output &amp; easy integration</strong> (I²C/ADC) for embedded projects.                 | <strong>Sealing &amp; waterproofing complexity</strong> — requires good mechanical design.            |
+| <strong>Customizable form factor &amp; depth sensitivity</strong> via probe geometry.                   | <strong>Long-term drift possible</strong> — periodic recalibration recommended.                   |</p>
 </li>
 </ol>
 <p><strong>H Bridge</strong></p>
@@ -1055,7 +1063,15 @@
 </table>
 </li>
 <li>
-<p>Custom Electrical Option/Mechanical Option</p>
+<p><strong>Custom Electrical Option/Mechanical Option</strong>
+       Build a robust, efficient, bidirectional motor driver (H-bridge) that supports PWM speed control, current limiting, and fast switching for motors up to chosen supply.
+   | <strong>Pros</strong>                                                                                                                             | <strong>Cons</strong>                                                                                                                            |
+| :----------------------------------------------------------------------------------------------------------------------------------- | :---------------------------------------------------------------------------------------------------------------------------------- |
+| <strong>Fully customizable</strong> — can tailor voltage/current capacity, switching speed, and thermal handling for specific motor requirements. | <strong>Complex design</strong> — requires careful timing and dead-time control to prevent MOSFET shoot-through.                                 |
+| <strong>Potentially lower cost per unit</strong> when built in quantity, since components can be sourced individually.                            | <strong>More development time</strong> — circuit design, testing, and PCB layout take significantly longer than using an integrated H-bridge IC. |
+| <strong>Higher current handling</strong> — discrete MOSFETs can support higher power motors compared to small integrated drivers.                 | <strong>Requires external logic</strong> — needs a separate driver or microcontroller PWM logic to control switching safely.                     |
+| <strong>Easier repairability</strong> — individual transistors and components can be replaced if damaged.                                         | <strong>Thermal management challenges</strong> — heat sinks or fans may be needed to maintain safe operating temperatures.                       |
+|                | <strong>Increased board space</strong> — discrete component designs are physically larger than integrated driver ICs.                            |</p>
 </li>
 </ol>
 
