deploy: cb3e68f0ffcba1462fa8f8734d5a6392136168ba

--- a/02-Component-Selection/Component-Selection/index.html
+++ b/02-Component-Selection/Component-Selection/index.html
@@ -926,6 +926,8 @@
 </tr>
 </tbody>
 </table>
+<p><strong>Choice and Rationale</strong>
+    The HG37-120-AA-00 DC motor was selected as the optimal choice because it provides a strong balance of torque, speed, and reliability for the project. Its integrated 120:1 planetary gearbox delivers the low-speed, high-torque output needed for precise motion without requiring additional mechanical components. This integration simplifies assembly, reduces design time, and ensures consistent performance. The motor’s documented specifications and build quality make it easier to model, test, and control compared to cheaper hobby motors. Although it costs slightly more than basic options like the PC280LG-301, the HG37-120-AA-00’s ease of integration, reliability, and predictable results make it the most practical and efficient solution for this embedded systems design project.</p>
 <p><strong>Soil Moisture Sensor</strong></p>
 <ol>
 <li>
@@ -1023,6 +1025,8 @@
 </tr>
 </tbody>
 </table>
+<p><strong>Choice and Rationale</strong>
+    The <strong>SEN0114 soil moisture sensor</strong> was selected as the best option because it offers a reliable and easy-to-use design with analog output, making it simple to integrate into a microcontroller-based system. It provides stable readings compared to cheaper resistive sensors and is less prone to corrosion due to its corrosion-resistant coating. The SEN0114 also includes clear documentation and calibration support from DFRobot, ensuring consistent data collection for soil monitoring applications. While it is slightly more expensive than basic resistive sensors like the 13637, its improved durability, accuracy, and compatibility with embedded systems make it the most dependable and efficient choice for this project.</p>
 <p><strong>H Bridge</strong></p>
 <ol>
 <li>
@@ -1116,6 +1120,8 @@
 </tr>
 </tbody>
 </table>
+<p><strong>Choice and Rationale</strong>
+    The <strong>HIP4082IPZ H-bridge driver</strong> was selected as the optimal choice because it provides high efficiency, robustness, and flexibility for controlling DC motors in the project. It supports <strong>high-voltage operation up to 80 V</strong> and can deliver large peak currents, making it suitable for a wide range of motor sizes. The HIP4082IPZ also features built-in <strong>high- and low-side MOSFET drivers</strong>, allowing precise PWM control and reliable switching performance. Although it requires external MOSFETs and slightly more complex circuit design compared to all-in-one motor driver ICs, this modular approach offers greater customization and power-handling capability. Its strong balance of performance, control precision, and scalability makes it the most effective and future-proof solution for the project’s motor control needs.</p>
 
 
 
