deploy: 0c140256dec2d06dccadb44f8333b9104d2a6057

--- a/04-Schematic/schematic/index.html
+++ b/04-Schematic/schematic/index.html
@@ -843,7 +843,7 @@
   <h1>Schematic</h1>
 
 <h2 id="overview">Overview</h2>
-<p>This schematic is design to support .... (highlight functionally, power, and controller).</p>
+<p>This schematic is design to show my subsystem of the team project. My subsystem handles sending and receiving signals from the hub microcontroller and actuating the sprinkler head.</p>
 <p><a class="glightbox" data-type="image" data-width="auto" data-height="auto" href="../SCHEMATIC%20SCREENSHOT.png" data-desc-position="bottom"><img alt="schematic" height:_300_="height:&quot;300;&quot;" src="../SCHEMATIC%20SCREENSHOT.png" style="style" width:_350_="width:&quot;350&quot;"></a>
 <strong>Figure ##:</strong> Showing a example schematic.</p>
 <h2 id="resouces">Resouces</h2>
